# lcn-frontend

./: .eslintrc.json  .gitignore  .yarnrc.yml  LICENSE  MANIFEST.in  Makefile  README.md  config.js  eslint.config.mjs  package.json  pyproject.toml  rspack.config.cjs  tsconfig.json  webpack.config.cjs
.github/workflows/: ReleaseActions.yaml  ci.yaml
_temp/: lcn-entities-data-table.ts
_temp/dialogs/: lcn-config-cover.ts  lcn-config-scene.ts  lcn-config-sensor.ts
build-scripts/: .eslintrc  bundle.cjs  env.cjs  paths.cjs  rollup.cjs  rspack.cjs  webpack.cjs
build-scripts/gulp/: clean.js  compress.js  entry-html.js  index.mjs  lcn.js  rspack.js  translations.js  webpack.js
docs/: lcn-frontend.md
script/: bootstrap  build  develop  merge_requirements.js  upgrade-frontend
src/: __init__.py  constants.py  entrypoint.ts  lcn-config-dashboard-router.ts  lcn-config-dashboard.ts  lcn-devices-data-table.ts  lcn-devices-page.ts  lcn-entities-data-table.ts  lcn-entities-page.ts  lcn-logger.ts  lcn-router.ts  main.ts
src/components/: context.ts  events.ts  lcn-filter-address.ts
src/dialogs/: lcn-config-binary-sensor.ts  lcn-config-climate.ts  lcn-config-cover.ts  lcn-config-light.ts  lcn-config-scene.ts  lcn-config-sensor.ts  lcn-config-switch.ts  lcn-create-device-dialog.ts  lcn-create-entity-dialog.ts  lcn-edit-entity-dialog.ts  progress-dialog.ts  show-dialog-create-device.ts  show-dialog-create-entity.ts  show-dialog-edit-entity.ts  show-dialog-progress.ts
src/helpers/: address_conversion.ts  brand_logo.ts  build-info.ts  config-exchange.ts  context.ts  events.ts  hardware_types.ts  module_properties.ts
src/localize/: localize.ts
src/localize/languages/: de.json  en.json
src/types/: lcn.ts  navigation.ts
