[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name         = "lcn_frontend"
license      = {text = "MIT"}
description  = "LCN panel for Home Assistant"
keywords     = ["Home Assistant", "LCN"]
readme       = "README.md"
authors      = [
    {name = "Andre Lengwenus", email = "alengwenus@gmail.com"},
]
requires-python = ">=3.11.0"
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/alengwenus/lcn-frontend.git"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["lcn_frontend*"]

[tool.mypy]
python_version = "3.9"
show_error_codes = true
strict = true
